# LaTeX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.js  latexmkrc.cmake  lecture.tex  package.json  qrcode.js  wallpaper.tex
.github/workflows/: ci.yml
lecture/: Makefile  advantage_usage.tex  basic_usage.tex  get_start.tex  graphic_table.tex  lecture.sty  lecture.tex  maths.tex  reference.tex  template.tex  text.tex
lecture/all/: CMakeLists.txt  lecture_all.tex  lecture_all.xdv  main.tex
lecture/appendix/: CMakeLists.txt  main.tex
lecture/c1/: CMakeLists.txt  c1.tex  c1_get_started.tex  c1_get_started.xdv  c1_hello_latex.tex  main.tex  perl
lecture/c1/examples/: 123.tex  packages.tex  simple.tex
lecture/c2/: CMakeLists.txt  c2.tex  c2_text.tex  c2_text.xdv  main.tex
lecture/c2/examples/: minipage.tex
lecture/c3/: CMakeLists.txt  c3.tex  c3_maths.tex  c3_maths.xdv  main.tex
lecture/c3/examples/: curl.tex
lecture/c4/: CMakeLists.txt  c4.tex  c4_graphic_table.tex  graphic_table.tex  main.tex
lecture/c5/: CMakeLists.txt  c5.tex  c5_advanced_usage.tex  main.tex
lecture/c5/tikz/: relation.tex
lecture/examples/: binary_tree.tex  curl.tex  packages.tex  scope.cpp  scope.tex  simple.tex
lecture/examples/maths/: curl.tex
lecture/test/: test.tex
wallpaper/: wallpaper.tex
